new slider added and content div moved to layout

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,47 +1,17 @@
 <!-- SLIDER -->
-<section class="slider">
-    <ul class="slider-navbar">
-
-        <li class="slider-before">
-            <i class="fas fa-chevron-left"></i>
-        </li>
-
-        <li class="slider-item active-item">
-            <div class="slider-icon">
-                <img src="assets/img/slider/slider1.jpg" alt="drone-tamiri-slider">
-            </div>
-
-            <div class="slider-image">
-                <img src="assets/img/slider/slider1.jpg" alt="drone-tamiri-slider">
-            </div>
-        </li>
-
-        <li class="slider-item">
-            <div class="slider-icon">
-                <img src="assets/img/slider/slider2.jpg" alt="drone-yedek-parca-ve-aksesuar-slider">
-            </div>
-
-            <div class="slider-image">
-                <img src="assets/img/slider/slider2.jpg" alt="drone-yedek-parca-ve-aksesuar-slider">
-            </div>
-        </li>
-
-        <li class="slider-item">
-            <div class="slider-icon">
-                <img src="assets/img/slider/slider3.jpg" alt="yeni-drone-satın-al-2-yil-boyunca-teknik-serviste-yuzde-5-indirim-kap-slider">
-            </div>
-
-            <div class="slider-image">
-                <img src="assets/img/slider/slider3.jpg" alt="yeni-drone-satın-al-2-yil-boyunca-teknik-serviste-yuzde-5-indirim-kap-slider">
-            </div>
-        </li>
-
-        <li class="slider-after">
-            <i class="fas fa-chevron-right"></i>
-        </li>
-
-    </ul>
-</section>
+<div class="swiper-container">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide"><img src="assets/img/slider/slider1.jpg" alt="drone-tamiri-slider"></div>
+      <div class="swiper-slide"><img src="assets/img/slider/slider2.jpg" alt="drone-yedek-parca-ve-aksesuar-slider"></div>
+      <div class="swiper-slide"><img src="assets/img/slider/slider3.jpg" alt="yeni-drone-satin-al-2-yil-boyunca-teknik-serviste-yuzde-5-indirim-kazan-slider"></div>
+      ...
+    </div>
+  
+    <!-- If we need scrollbar -->
+    <div class="swiper-scrollbar"></div>
+</div>
 
 <!-- THREE-CARDS -->
 <section class="three-cards">
