--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -653,122 +653,16 @@ html {}
 
 
 /* SLIDER */
-.slider *::selection {
-    background-color: transparent;
+
+.swiper-container{
+    max-height: 100vh;
 }
 
-.slider {
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    text-align: center;
-}
-
-.slider-navbar {
-    display: block;
-    list-style: none;
-    width: 100%;
-    margin: auto;
-    position: absolute;
-    top: auto;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 50px;
-    padding: 0px 10px 10px 10px;
-    cursor: default;
-    text-align: center;
-    line-height: 32px;
-}
-
-.slider-before,
-.slider-after {
-    display: inline-block;
-    width: 55px;
-    height: 40px;
-    border-radius: 10px;
-    margin: 1px;
-    cursor: pointer;
-    border: 2px solid gray;
-    transition: 0.2s all;
-}
-
-.slider-before:hover,
-.slider-after:hover {
-    background-color: gray;
-}
-
-.slider-before i,
-.slider-after i {
-    transform: translateY(15%);
-    color: gray;
-    transition: 0.2s all;
-}
-
-.slider-before:hover i,
-.slider-after:hover i {
-    color: white;
-}
-
-.slider-item {
-    display: inline-block;
-    position: unset;
-    width: 55px;
-    height: 40px;
-    border-radius: 10px;
-    margin: 1px;
-    cursor: pointer;
-    border: 2px solid transparent;
-}
-
-.slider-item.active-item {
-    border: 2px solid white;
-}
-
-.slider-item::selection {
-    background-color: transparent;
-}
-
-.slider-icon {
-    width: 100%;
-    height: 100%;
-}
-
-.slider-icon img {
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
+.swiper-slide img{
+    min-height: 100vh;
+    max-width: 100vw;
     object-fit: cover;
-    overflow: hidden;
-}
-
-.slider-image {
-    width: 100%;
-    height: 100vh;
-    text-align: center;
-    margin: auto;
-    position: absolute;
-    left: 0;
-    top: auto;
-    right: 0;
-    bottom: 0;
-
-    z-index: -1;
-}
-
-.slider-image img {
-    display: none;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 0;
-    opacity: 1;
-}
-
-.slider-item.active-item .slider-image img {
-    display: block;
+    object-position: center;
 }
 
 /* 3-CARDS */
