--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- WEBSITE DESCRIPTION -->
-    <meta name="description" content="Dji ürünleri için teknik servis, bakım ve onarım hizmeti vermekteyiz. Yeni Dji ürünleri satışı, yedek parça ve aksesuar teminimiz de bulunmaktadır.">
+    <meta name="description" content="Dji ürünleri için teknik servis hizmeti vermekteyiz. Aynı zamanda yeni Dji ürünleri satışı, yedek parça ve aksesuar teminimiz de bulunmaktadır.">
 
     <!-- WEBSITE KEYWORDS -->
     <meta name="keywords" content="dji destek, dji teknik destek, dji servis, dji teknik servis, drone satın al, drone tamir, drone aksesuar, drone yedek parça">
