body tag subrow

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -236,7 +236,9 @@
 
     <!-- CONTENT -->
     <div class="content">
-        <%- body %>
+        <%- 
+        body 
+        %>
     </div>
     
     <!-- FOOTER -->
