new seo system for technic service page and dynamic description, keywords

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,20 +13,23 @@
       gtag('config', 'G-HKY90DJ47R');
     </script>
 
+    <!-- TITLE -->
+    <title><%- title %></title>
+
+    <!-- WEBSITE DESCRIPTION -->
+    <meta name="description" content="<%-description%>">
+
+    <!-- WEBSITE KEYWORDS -->
+    <meta name="keywords" content="<%-keywords%>">
+
+    <!-- WEBSITE AUTHOR -->
+    <meta name="author" content="<%-author%>">
+
     <!-- META TAGS -->
     <meta charset="UTF-8">
 
     <!-- RESPONSIVE -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- WEBSITE DESCRIPTION -->
-    <meta name="description" content="Dji ürünleri için teknik servis hizmeti vermekteyiz. Aynı zamanda yeni Dji ürünleri satışı, yedek parça ve aksesuar teminimiz de bulunmaktadır.">
-
-    <!-- WEBSITE KEYWORDS -->
-    <meta name="keywords" content="dji destek, dji teknik destek, dji servis, dji teknik servis, drone satın al, drone tamir, drone aksesuar, drone yedek parça">
-
-    <!-- WEBSITE AUTHOR -->
-    <meta name="author" content="Berat Akdemir">
 
     <!-- WEBSITE ICON -->
     <link rel="icon" href="/assets/img/logo/favicon.svg" sizes="16x16">
@@ -45,13 +48,6 @@
 
     <!-- WEBSITE STYLE -->
     <link rel="stylesheet" href="/assets/css/style.css?v=1.9">
-
-    <!-- TITLE -->
-    <% if (title) { %>
-    <title><%- title %> - DJI Destek | Teknik Servis ve Satış Hizmetleri</title>
-    <% } else { %>
-    <title>DJI Destek | Teknik Servis ve Satış Hizmetleri</title>
-    <% } %>
 
 </head>
 
@@ -152,12 +148,12 @@
                                         <h3 class="title-1"><a href="/teknik-servis/mavic">Mavic Serisi</a></h3>
 
                                         <div class="title-2-cover">
-                                            <h4 class="title-2"><a href="/teknik-servis/mavic/mavic-1">Mavic 1</a></h4>
+                                            <h4 class="title-2"><a href="/teknik-servis/mavic/mavic">Mavic</a></h4>
                                             <div class="title-3-cover">
-                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-1/air">Air</a></h5>
-                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-1/air-2">Air 2</a></h5>
-                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-1/pro">Pro</a></h5>
-                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-1/pro-platinum">Pro Platinum</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic/air">Air</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic/air-2">Air 2</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic/pro">Pro</a></h5>
+                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic/pro-platinum">Pro Platinum</a></h5>
                                             </div>
                                         </div>
 
@@ -166,8 +162,6 @@
                                             <div class="title-3-cover">
                                                 <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-2/zoom">Zoom</a></h5>
                                                 <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-2/pro">Pro</a></h5>
-                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-2/dual">Dual</a></h5>
-                                                <h5 class="title-3"><a href="/teknik-servis/mavic/mavic-2/advanced">Advanced</a></h5>
                                             </div>
                                         </div>
 
