added apple-touch-icon to layout

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,6 +34,9 @@
     <!-- WEBSITE ICON -->
     <link rel="icon" href="/assets/img/logo/favicon.svg" sizes="16x16">
 
+    <!-- APPLE TOUCH ICON -->
+    <link rel="apple-touch-icon" href="/assets/img/logo/favicon.svg">
+
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="/assets/css/bootstrap/bootstrap-4.3.1.min.css">
 
