a-t-i svg to png

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,7 +35,7 @@
     <link rel="icon" href="/assets/img/logo/favicon.svg" sizes="16x16">
 
     <!-- APPLE TOUCH ICON -->
-    <link rel="apple-touch-icon" href="/assets/img/logo/favicon.svg">
+    <link rel="apple-touch-icon" href="/assets/img/logo/favicon.png">
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="/assets/css/bootstrap/bootstrap-4.3.1.min.css">
