--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,17 @@
       gtag('config', 'G-HKY90DJ47R');
     </script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-196847632-1">
+    </script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-196847632-1');
+    </script>
+
     <!-- TITLE -->
     <title><%- title %></title>
 
