link added to address

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -298,7 +298,7 @@
                         <ul>
                             <li><i class="fas fa-phone-alt"></i><a href="tel:+90 (533) 735 7895">+90 (533) 735 7895</a></li>
                             <li><i class="fas fa-envelope"></i><a href="mailto:iletisim@djidestek.com">iletisim@djidestek.com</a></li>
-                            <li><i class="fas fa-map-marker-alt"></i><span>Caferağa Mah. Nail Bey Sk. No:7/A KADIKÖY/İSTANBUL</span></li>
+                            <li><i class="fas fa-map-marker-alt"></i><a href="https://goo.gl/maps/kMgBM9k615peiY687" target="_blank">Caferağa Mah. Nail Bey Sk. No:7/A KADIKÖY/İSTANBUL</a></li>
                         </ul>
                     </div>
                 </div>
