user-scalable=no

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -43,7 +43,7 @@ gtag('config', 'UA-196847632-1');
 <meta charset="UTF-8">
 
 <!-- RESPONSIVE -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
 <!-- WEBSITE ICON -->
 <link rel="icon" href="/assets/img/logo/favicon.svg" sizes="16x16">
