--- a/views/partials/admin/head.ejs
+++ b/views/partials/admin/head.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
 
     <!--RESPONSIVE-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
 
     <!--FAVICON-->
     <link rel="shortcut icon" href="/assets/img/logo/favicon.svg" />
