--- a/views/admin/blog-edit.ejs
+++ b/views/admin/blog-edit.ejs
@@ -51,6 +51,7 @@
 <div class="form-group">
     <label>Blog Durumu</label><br>
     <input type="checkbox" name="blogStatus" <%if(- blog.blogStatus ) {%> checked <% } %>/>
+    <input type="checkbox" name="blogGeneralStatus" <%if(- blog.blogGeneralStatus ) {%> checked <% } %>/>
 </div>
 
 <a href="/admin/blog" class="btn btn-light">Geri</a>
