--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,6 +1,6 @@
 <div class="container">
     
-    <div class="blogs row">
+    <div class="blogs">
 
         <% blog.forEach(blog => { %>
 
@@ -8,13 +8,14 @@
             <div class="blog">
                 <a href="/blog/<%- blog.url %>">
 
-                <div class="blog-image">
-                    <img src="/assets/img/blog/<%- blog.blogImage %>" alt="<%- blog.blogImage %>">
-                </div>
+                    <div class="blog-image">
+                        <img src="/assets/img/blog/<%- blog.blogImage %>" alt="<%- blog.blogImage %>">
+                    </div>
 
-                <div class="blog-texts">
-                    <h2 class="blog-title"><%- blog.blogTitle %></h2>
-                </div>
+                    <div class="blog-texts">
+                        <h2 class="blog-title"><%- blog.blogTitle %></h2>
+                    </div>
+                    
                 </a>
             </div>  
         </div>
