add blog general status added

--- a/views/admin/blog-add.ejs
+++ b/views/admin/blog-add.ejs
@@ -41,6 +41,7 @@
 <div class="form-group">
     <label>Blog Durumu</label><br>
     <input type="checkbox" name="blogStatus"/>
+    <input type="checkbox" name="blogGeneralStatus" />
 </div>
 
 <a href="/admin/blog" class="btn btn-light">İptal</a>
