--- a/views/layouts/layout-seoText.ejs
+++ b/views/layouts/layout-seoText.ejs
@@ -197,6 +197,8 @@
         <div class="footer-top">
     
             <div class="container">
+    
+                <%- include('../partials/footer-top-seo-text') %>
         
                 <div class="footer-top-menus">
                     <%- include('../partials/footer-top-technic-service') %>
