--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,6 +480,53 @@ html {}
     border-bottom: 1px solid #999;
 }
 
+.footer-top-seo-text{
+    color: #999;
+    margin-bottom: 20px;
+}
+
+.footer-top-seo-text h1{
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+
+.footer-top-seo-text h2{
+    font-size: 20px;
+    margin-bottom: 2.5px;
+}
+
+.footer-top-seo-text h3{
+    font-size: 16px;
+    margin-bottom: 1.25px;
+}
+
+.footer-top-seo-text h4,
+.footer-top-seo-text h5,
+.footer-top-seo-text h6{
+    font-size: 12px;
+    margin-bottom: 0.625px;
+}
+
+.footer-top-seo-text p{
+    font-size: 12px;
+}
+
+.footer-top-seo-text a{
+    color: #d5d5d5;
+}
+
+.footer-top-seo-text .constantSeoText{
+    margin-bottom: 15px;
+}
+
+.footer-top-seo-text .slideSeoText{
+    cursor: pointer;
+}
+
+.footer-top-seo-text .constantSeoText p{
+    display: inline;
+}
+
 .footer-top-menus {
     display: flex;
     flex-wrap: wrap;
@@ -607,6 +654,10 @@ html {}
 @media (max-width:768px) {
     .footer {
         padding: 0;
+    }
+
+    .footer-top-seo-text{
+        padding: 0 10px;
     }
 
     .footer-top {
