--- a/views/layouts/layout-admin.ejs
+++ b/views/layouts/layout-admin.ejs
@@ -164,6 +164,11 @@
 										<div class="menu-submenu menu-submenu-classic menu-submenu-left">
 											<ul class="menu-subnav">
 												<li class="menu-item menu-item-submenu" data-menu-toggle="hover" aria-haspopup="true">
+													<a href="/admin/teknik-servis" class="menu-link">
+														<span class="menu-text">Teknik Servis</span>
+													</a>
+												</li>
+												<li class="menu-item menu-item-submenu" data-menu-toggle="hover" aria-haspopup="true">
 													<a href="/admin/blog" class="menu-link">
 														<span class="menu-text">Blog</span>
 													</a>
