fav blogs at the bottom updated

--- a/views/partials/footer-top-blog.ejs
+++ b/views/partials/footer-top-blog.ejs
@@ -2,5 +2,6 @@
     <h3>Blog</h3>
     <ul>
         <li><a href="/blog/dronelar-nasil-ucar">Drone'lar Nasıl Uçar?</a></li>
+        <li><a href="/blog/drone-nasil-ucurulur">Drone Nasıl Uçurulur?</a></li>
     </ul>
 </div>
