--- a/views/admin/technic-service.ejs
+++ b/views/admin/technic-service.ejs
@@ -2,7 +2,7 @@
     <div class="card-header flex-wrap py-5">
         <div class="card-title">
             <h3 class="card-label">Drone'lar
-            <div class="text-muted pt-2 font-size-sm">Bütün Drone'lar</div></h3>
+            <div class="text-muted pt-2 font-size-sm">Bütün Drone Kayıtları</div></h3>
         </div>
         <div class="card-toolbar">
             
@@ -21,7 +21,7 @@
                 </tr>
             </thead>
             <tbody>
-                <% drone.forEach(drone => { %>
+                <% droneSeries.forEach(drone => { %>
                 <tr>
                     <td class="drone-title">
                         <a href="/teknik-servis/<%- drone.url %>" target="_blank"><%- drone.name %></a>
@@ -31,6 +31,28 @@
                         <span class="drone-remove" drone-id="<%-drone._id%>"><i class="fas fa-trash-alt"></i></span>
                     </td>
                 </tr>
+                <% }) %>
+                <% droneModels.forEach(drone => { %>
+                    <tr>
+                        <td class="drone-title">
+                            <a href="/teknik-servis/<%- drone.parentUrl %>/<%- drone.url %>" target="_blank"><%- drone.parentName %> -> <%- drone.name %></a>
+                        </td>  
+                        <td class="drone-action">
+                            <a href="/admin/teknik-servis-drone-duzenle/<%- drone._id %>" class="drone-edit"><i class="far fa-edit"></i></a>
+                            <span class="drone-remove" drone-id="<%-drone._id%>"><i class="fas fa-trash-alt"></i></span>
+                        </td>
+                    </tr>
+                <% }) %>
+                <% droneAltModels.forEach(drone => { %>
+                    <tr>
+                        <td class="drone-title">
+                            <a href="/teknik-servis/<%- drone.bigParentUrl %>/<%- drone.parentUrl %>/<%- drone.url %>" target="_blank"><%- drone.bigParentName %> -> <%- drone.parentName %> -> <%- drone.name %></a>
+                        </td>  
+                        <td class="drone-action">
+                            <a href="/admin/teknik-servis-drone-duzenle/<%- drone._id %>" class="drone-edit"><i class="far fa-edit"></i></a>
+                            <span class="drone-remove" drone-id="<%-drone._id%>"><i class="fas fa-trash-alt"></i></span>
+                        </td>
+                    </tr>
                 <% }) %>
             </tbody>
         </table>
