--- a/views/teknik-servis.ejs
+++ b/views/teknik-servis.ejs
@@ -32,13 +32,7 @@
 
                 <div class="form-group">
                     <label for="exampleFormControlSelect3">Problem Başlığı</label>
-                    <select name="problemTitle" class="form-control select4" id="exampleFormControlSelect3" >
-                        <option name="problemTitle" value="Spark" catId="0" disabled hidden selected="selected">Problem Seçiniz...</option>
-                        <option name="problemTitle" value="Drone Çalışmıyor">Drone Çalışmıyor</option>
-                        <option name="problemTitle" value="Uyduya Bağlanamıyor">Uyduya Bağlanamıyor</option>
-                        <option name="problemTitle" value="Kalibrasyon Yapılmıyor">Kalibrasyon Yapılamıyor</option>
-                        <option name="problemTitle" value="Diğer">Diğer</option>
-                    </select>
+                    <input name="problemTitle" type="text" class="form-control" id="exampleFormControlInput1"  placeholder="Problem Başlığı Giriniz...">
                 </div>
 
                 <div class="form-group">
