--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -27,6 +27,14 @@ gtag('js', new Date());
 gtag('config', 'UA-196847632-1');
 </script>
 
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PLF5JRL');</script>
+<!-- End Google Tag Manager -->
+
 <!-- TITLE -->
 <title><%- title %></title>
 
